rework to use integrated bluemap for better mod support add static fallback to keep always on map experience

--- a/mcrouter.yaml
+++ b/mcrouter.yaml
@@ -68,7 +68,7 @@ spec:
       containers:
       - image: itzg/mc-router:latest
         name: mc-router
-        args: ["--api-binding", ":8080", "--in-kube-cluster", "--auto-scale-up", "--auto-scale-down", "--auto-scale-down-after", "10m"]
+        args: ["--api-binding", ":8080", "--in-kube-cluster", "--auto-scale-up", "--auto-scale-down", "--auto-scale-down-after", "90m"] #90m  scale down to allow for backups/long running map gen
         ports:
         - name: proxy
           containerPort: 25565
