--- a/servers/base/minecraft-server-service.yaml
+++ b/servers/base/minecraft-server-service.yaml
@@ -9,5 +9,7 @@ spec:
   ports:
   - port: 25565
     name: minecraft
+  - port: 8100
+    name: bluemap
   selector:
     app: minecraft-server # Will be prefixed by overlay, matches StatefulSet labels
