--- a/servers/base/kustomization.yaml
+++ b/servers/base/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - bluemap-lazy-proxy-nginx-config.yaml
   - bluemap-lazy-proxy-deployment.yaml
   - bluemap-lazy-proxy-service.yaml
+  - whitelist.yaml
 
 # Variable to hold the instance name (e.g., "vintage")
 # This will be sourced from the 'instance' label applied by commonLabels from the overlay.
